i think it is last commit

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             <option value="Dragon">Dragon</option>
           </select>
           <select data-select-sort name="" id="">
+            <option value="id">DEFAULT</option>
             <option value="az">A-Z</option>
             <option value="za">Z-A</option>
             <option value="wu">WEIGHT UP</option>
